objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DOH</fullName>
                </value>
                <value>
                    <fullName>OASAS</fullName>
                </value>
                <value>
                    <fullName>OCFS</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OFA</fullName>
                </value>
                <value>
                    <fullName>OPWDD</fullName>
                </value>
                <value>
                    <fullName>OTDA</fullName>
                </value>
                <value>
                    <fullName>OVS</fullName>
                </value>
                <value>
                    <fullName>WCB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Info</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Instructions</fullName>
                </value>
                <value>
                    <fullName>Quick Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chat Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Keywords</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55 B/C</fullName>
                </value>
                <value>
                    <fullName>ACA Reporting</fullName>
                </value>
                <value>
                    <fullName>Adult Care Facilities (ACF)</fullName>
                </value>
                <value>
                    <fullName>Adult Use</fullName>
                </value>
                <value>
                    <fullName>AIH</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BCR</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>Bureau of Narcotic Enforcement (BNE)</fullName>
                </value>
                <value>
                    <fullName>CEH-BTSA</fullName>
                </value>
                <value>
                    <fullName>Child Care Desert Grant</fullName>
                </value>
                <value>
                    <fullName>Childcare Fraud Hotline</fullName>
                </value>
                <value>
                    <fullName>Child Care Stabilization</fullName>
                </value>
                <value>
                    <fullName>Claims/C-3</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>COVID</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>DAVE</fullName>
                </value>
                <value>
                    <fullName>De-Authorized Providers</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Division of Child Care Services (DCCS)</fullName>
                </value>
                <value>
                    <fullName>EISP</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Services (EMS)</fullName>
                </value>
                <value>
                    <fullName>Employee Benefit Division (EBD)</fullName>
                </value>
                <value>
                    <fullName>ERPO</fullName>
                </value>
                <value>
                    <fullName>HEARS</fullName>
                </value>
                <value>
                    <fullName>HEARS Outbound</fullName>
                </value>
                <value>
                    <fullName>Hemp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Script Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Articles_Pending_Review</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>URL_NAME</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>OWNER_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VALIDATION_STATUS_ENUM</field>
            <operation>equals</operation>
            <value>Not Validated</value>
        </filters>
        <label>Articles Pending Review</label>
    </listViews>
    <recordTypes>
        <fullName>Info_Sheet</fullName>
        <active>true</active>
        <description>Quick Info, Instructions, Tabs, Contact Info, FAQs</description>
        <label>Info Sheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question</fullName>
        <active>true</active>
        <description>Question and Answer</description>
        <label>Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question_with_Script</fullName>
        <active>true</active>
        <description>Questions which necessitate script launching</description>
        <label>Question with Script</label>
    </recordTypes>
</CustomObject>